--- a/oppgave_2/makefile
+++ b/oppgave_2/makefile
@@ -11,10 +11,10 @@ RM = rm -f
 OBJDIR = obj
 
 # PATHS
-_DEPS = main.h
+_DEPS = main.h eksamen_v24_oppgave2_all_lower.h eksamen_v24_oppgave2_all_upper.h eksamen_v24_oppgave2_anagram.h eksamen_v24_oppgave2_disjoint.h eksamen_v24_oppgave2_heterogram.h eksamen_v24_oppgave2_palindrom.h
 DEPS = $(patsubst %, $(INCLDIR)/%, $(_DEPS))
 
-_OBJS = main.o
+_OBJS = main.o eksamen_v24_oppgave2_all_lower.o eksamen_v24_oppgave2_all_upper.o eksamen_v24_oppgave2_anagram.o eksamen_v24_oppgave2_disjoint.o eksamen_v24_oppgave2_heterogram.o eksamen_v24_oppgave2_palindrom.o
 OBJS = $(patsubst %, $(OBJDIR)/%, $(_OBJS))
 
 # RULES
