--- a/oppgave_3/CMakeLists.txt
+++ b/oppgave_3/CMakeLists.txt
@@ -6,4 +6,5 @@ set(CMAKE_C_STANDARD 11)
 include_directories(include)
 
 add_executable(task
-        src/main.c)
+        src/main.c
+        include/main.h)
