Added extensive error handling to lists. Doubly linkedlist and singly linkedlist are mostly done

--- a/oppgave_3/CMakeLists.txt
+++ b/oppgave_3/CMakeLists.txt
@@ -10,4 +10,5 @@ add_executable(task
         include/main.h
         src/tableReservationList.c
         include/tableReservationList.h
-        src/orderList.c)
+        src/orderList.c
+        include/orderList.h)
