Made menuApplication.c, updated header file conventions. Added internal logic in the menuApplication.c

--- a/oppgave_3/CMakeLists.txt
+++ b/oppgave_3/CMakeLists.txt
@@ -11,4 +11,6 @@ add_executable(task
         src/tableReservationList.c
         include/tableReservationList.h
         src/orderList.c
-        include/orderList.h)
+        include/orderList.h
+        src/menuApplication.c
+        include/menuApplication.h)
