--- a/oppgave_4/makefile
+++ b/oppgave_4/makefile
@@ -11,10 +11,10 @@ RM = rm -f
 OBJDIR = obj
 
 # PATHS
-_DEPS = main.h
+_DEPS = eksamen_v24_oppgave4.h
 DEPS = $(patsubst %, $(INCLDIR)/%, $(_DEPS))
 
-_OBJS = main.o
+_OBJS = eksamen_v24_oppgave4.o
 OBJS = $(patsubst %, $(OBJDIR)/%, $(_OBJS))
 
 # RULES
