Now the thread application works as intended. Changed return method in the thread function. Changed makefile

--- a/oppgave_4/makefile
+++ b/oppgave_4/makefile
@@ -11,10 +11,10 @@ RM = rm -f
 OBJDIR = obj
 
 # PATHS
-_DEPS = eksamen_v24_oppgave4.h
+_DEPS = eksamen_v24_oppgave4.h sha1.c
 DEPS = $(patsubst %, $(INCLDIR)/%, $(_DEPS))
 
-_OBJS = eksamen_v24_oppgave4.o
+_OBJS = eksamen_v24_oppgave4.o sha1.o
 OBJS = $(patsubst %, $(OBJDIR)/%, $(_OBJS))
 
 # RULES
@@ -24,6 +24,14 @@ $(OBJDIR)/%.o: $(SRCDIR)/%.c $(DEPS)
 $(TARGET): $(OBJS)
 	$(CC) -o $@ $^ $(CFLAGS)
 	
+valgrind:
+	make
+	valgrind --leak-check=yes --show-leak-kinds=all --track-origins=yes ./$(TARGET) eksamen_v24_oppgave4_pg2265.txt
+
+run:
+	make
+	./$(TARGET) eksamen_v24_oppgave4_pg2265.txt
+	
 .PHONY: clean
 clean:
-	$(RM) $(OBJDIR)/*.o *~core $(INCLDIR)/*~
+	$(RM) $(OBJDIR)/*.o *~core $(INCLDIR)/*~ $(TARGET)
