Server is open for two clients with threads. Currently a bug with ip address i expect

--- a/oppgave_5/client/makefile
+++ b/oppgave_5/client/makefile
@@ -11,10 +11,10 @@ RM = rm -f
 OBJDIR = obj
 
 # PATHS
-_DEPS = main.h server.h
+_DEPS = main.h client.h
 DEPS = $(patsubst %, $(INCLDIR)/%, $(_DEPS))
 
-_OBJS = main.o server.o
+_OBJS = main.o client.o
 OBJS = $(patsubst %, $(OBJDIR)/%, $(_OBJS))
 
 # RULES
@@ -23,6 +23,18 @@ $(OBJDIR)/%.o: $(SRCDIR)/%.c $(DEPS)
 	
 $(TARGET): $(OBJS)
 	$(CC) -o $@ $^ $(CFLAGS)
+	
+valgrind:
+	make
+	valgrind --leak-check=yes --show-leak-kinds=all --track-origins=yes ./$(TARGET) eksamen_v24_oppgave4_pg2265.txt
+	
+client1:
+	make
+	./$(TARGET) -server 127.0.0.1 -port 8080 -phone 1234
+
+client2:
+	make
+	./$(TARGET) -server 127.0.0.1 -port 8081 -phone 4321
 	
 .PHONY: clean
 clean:
