--- a/oppgave_6/CMakeLists.txt
+++ b/oppgave_6/CMakeLists.txt
@@ -6,8 +6,12 @@ set(CMAKE_C_STANDARD 99)
 add_executable(oppgave_6 src/main.c
         include/main.h
         src/newBeautifier.c
-        include/newBeautifier.h
         src/oppgave_6.c
         include/oppgave_6.h
+        src/newNewBeautifier.c
+        include/newNewBeautifier.h
+        src/newNewBeautifier.c
+        include/linkedList.h
+        src/linkedList.c
 
 )
