Mostly working now. Need to change add initialization, condition and incrementation of for loop.

--- a/oppgave_3/CMakeLists.txt
+++ b/oppgave_3/CMakeLists.txt
@@ -13,4 +13,5 @@ add_executable(task
         src/orderList.c
         include/orderList.h
         src/menuApplication.c
-        include/menuApplication.h)
+        include/menuApplication.h
+        src/tableReservationList.c)
