Good bunch of cleanup in oppgave_6

--- a/oppgave_6/CMakeLists.txt
+++ b/oppgave_6/CMakeLists.txt
@@ -5,12 +5,11 @@ set(CMAKE_C_STANDARD 99)
 
 add_executable(oppgave_6 src/main.c
         include/main.h
-        src/newBeautifier.c
-        src/oppgave_6.c
-        include/oppgave_6.h
-        src/newNewBeautifier.c
-        include/newNewBeautifier.h
-        src/newNewBeautifier.c
+        src/oppgave6_test.c
+        include/oppgave6_test.h
+        src/beautifier.c
+        include/beautifier.h
+        src/beautifier.c
         include/linkedList.h
         src/linkedList.c
 
