Small fix in oppgave 6. When idex position problem

--- a/oppgave_6/makefile
+++ b/oppgave_6/makefile
@@ -26,7 +26,7 @@ $(TARGET): $(OBJS)
 	
 valgrind:
 	make
-	valgrind --leak-check=yes --show-leak-kinds=all --track-origins=yes ./$(TARGET)
+	valgrind ./$(TARGET)
 
 run:
 	make
